# FastAPI_wav2mp3

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  main.py  pyproject.toml
wav2mp3/: api.py  auth.py  config.py
wav2mp3/database/: core.py
wav2mp3/records/: models.py  service.py  utils.py  views.py
wav2mp3/users/: models.py  service.py  views.py
